2006-10-15  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Language stuff: plugins can now handle language changes in a natural
	fashion. lart is the first plugin to make use of this. NOTE: this
	is not (yet) backwards compatible: the old larts/praises files from
	previous rbot setups have to be renamed manually
	* Language stuff: italian translations

2006-09-21  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: restore backwards compatibility: 'auth
	<masterpassword>' and 'login owner <masterpassword>' both work.
	* Topic plugin: cleanups. Implement 'topic undo'. 'topic undo' after a
	'topic undo' undoes the last undo.

2006-09-09  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: rbot was opping anyone who asked for it (opme
	plugin). Fixed, and cleaned up.

2006-09-01  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* New Auth Framework: document and fine tune permissions view the auth
	core botmodule.
	* Version: when run from a svn checkout, the bot now tries to report
	which svn revision it's at, and if there are local changes

2006-08-31  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Nickserv plugin: bot will now try to inform nickserv when password
	is changed. Moreover it's not necessary to specify the nick anymore if
	you want to change the password for the current bot nick. Also do some
	internal cleanups while we're at it.

2006-08-29  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Script plugin: new (UNSAFE!) echo functions. Just like eval, but
	m.replies the result of the evaluation.
	* New Auth Framework: config keys now have their own permissions. So
	you can allow people to view or edit only some of the config values.
	auth.password defaults to false. Still needs some work.

2006-08-26  Giuseppe Bilotta <giuseppe.bilotta@gmail.com>

	* Plugin message mapper: new implementation. Multi-word parameters now
	need not be the last, and it is possible to retrieve the entire